// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialAddEdit can show cloud options when adding credentials 1`] = `
<div
  className="credential-add-edit"
>
  <DeploymentCloud
    acl={
      Object {
        "isReadOnly": [Function],
      }
    }
    addNotification={[Function]}
    cloud={null}
    controllerIsReady={[Function]}
    key="deployment-cloud"
    listClouds={[Function]}
    setCloud={[Function]}
  />
</div>
`;

exports[`CredentialAddEdit can show the form for updating credentials 1`] = `
<div
  className="credential-add-edit"
>
  <DeploymentCredentialAdd
    acl={
      Object {
        "isReadOnly": [Function],
      }
    }
    addNotification={[Function]}
    cloud={
      Object {
        "cloudType": "aws",
      }
    }
    credentialName="cred-name"
    credentials={
      Array [
        "test1",
        "test2",
      ]
    }
    key="deployment-credential-add"
    onCancel={[Function]}
    onCredentialUpdated={[Function]}
    sendAnalytics={[Function]}
    updateCloudCredential={[Function]}
    user="spinach@external"
  />
</div>
`;

exports[`CredentialAddEdit can show the form when adding credentials 1`] = `
<div
  className="credential-add-edit"
>
  <div>
    <div
      className="credential-add-edit__choose-cloud"
    >
      <Button
        action={[Function]}
        type="inline-neutral"
      >
        Change cloud
      </Button>
    </div>
    <DeploymentCloud
      acl={
        Object {
          "isReadOnly": [Function],
        }
      }
      addNotification={[Function]}
      cloud={
        Object {
          "title": "aws",
        }
      }
      controllerIsReady={[Function]}
      key="deployment-cloud"
      listClouds={[Function]}
      setCloud={[Function]}
    />
    <DeploymentCredentialAdd
      acl={
        Object {
          "isReadOnly": [Function],
        }
      }
      addNotification={[Function]}
      cloud={
        Object {
          "title": "aws",
        }
      }
      credentialName={null}
      credentials={
        Array [
          "test1",
          "test2",
        ]
      }
      key="deployment-credential-add"
      onCancel={[Function]}
      onCredentialUpdated={[Function]}
      sendAnalytics={[Function]}
      updateCloudCredential={[Function]}
      user="spinach@external"
    />
  </div>
</div>
`;

exports[`CredentialAddEdit can show the loading spinner 1`] = `
<div
  className="credential-add-edit"
>
  <Spinner />
</div>
`;
